# rust-shardio

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.html
.github/: dependabot.yml
.github/workflows/: test.yml
benches/: my_bench.rs
master/: aliases.js  search-index.js  settings.html  source-files.js
master/ansi_term/: enum.Color.html  enum.Colour.html  struct.ANSIGenericString.html  struct.ANSIGenericStrings.html  struct.Infix.html  struct.Prefix.html  struct.Style.html  struct.Suffix.html
master/arrayvec/: index.html  struct.ArrayString.html  struct.ArrayVec.html  struct.CapacityError.html  struct.Drain.html  struct.IntoIter.html  trait.RangeArgument.html
master/backtrace/: all.html  enum.BytesOrWideString.html  fn.resolve.html  fn.resolve_unsynchronized.html  fn.trace.html  fn.trace_unsynchronized.html  index.html  struct.Backtrace.html  struct.BacktraceFrame.html  struct.BacktraceSymbol.html  struct.Frame.html  struct.Symbol.html  struct.SymbolName.html
master/backtrace_sys/: enum.backtrace_state.html  fn.backtrace_create_state.html  fn.backtrace_pcinfo.html  fn.backtrace_syminfo.html  type.backtrace_error_callback.html  type.backtrace_full_callback.html  type.backtrace_syminfo_callback.html
master/bincode/: all.html  enum.ErrorKind.html  fn.config.html  fn.deserialize.html  fn.deserialize_from.html  fn.deserialize_from_custom.html  fn.serialize.html  fn.serialize_into.html  fn.serialized_size.html  index.html  struct.Config.html  trait.BincodeRead.html  type.Error.html  type.Result.html
master/crc32fast/: struct.Hasher.html
master/crossbeam_channel/: SelectTimeoutError.t.html  SelectedOperation.t.html  SendTimeoutError.t.html  TryReadyError.t.html  all.html  enum.RecvTimeoutError.html  enum.SendTimeoutError.html  enum.TryRecvError.html  enum.TrySendError.html  fn.after.html  fn.bounded.html  fn.never.html  fn.tick.html  fn.unbounded.html  index.html  macro.select.html  macro.select_loop.html  never.v.html  select_loop.m.html  sidebar-items.js  struct.IntoIter.html  struct.Iter.html  struct.ReadyTimeoutError.html  struct.Receiver.html  struct.RecvError.html  struct.Select.html  struct.SelectRecvError.html  struct.SelectSendError.html  struct.SelectTimeoutError.html  struct.SelectedOperation.html  struct.SendError.html  struct.Sender.html  struct.TryIter.html  struct.TryReadyError.html  struct.TrySelectError.html
master/crossbeam_deque/: enum.Steal.html  index.html  struct.Deque.html  struct.Stealer.html
master/crossbeam_epoch/: all.html  fn.default_collector.html  fn.unprotected.html  index.html  struct.Atomic.html  struct.Collector.html  struct.CompareAndSetError.html  struct.Guard.html  struct.Handle.html  struct.Owned.html  struct.Shared.html  trait.CompareAndSetOrdering.html  trait.Pointer.html
master/crossbeam_utils/: Backoff.t.html  all.html  index.html  struct.Backoff.html  struct.CachePadded.html
master/difference/: all.html  enum.Difference.html  fn.diff.html  fn.print_diff.html  index.html  macro.assert_diff.html  struct.Changeset.html
master/either/: enum.Either.html  index.html
master/failure/: struct.Backtrace.html  struct.Causes.html  struct.Compat.html  struct.Context.html  struct.Error.html  struct.SyncFailure.html
master/flate2/: all.html  enum.FlushCompress.html  index.html  (+13 more)
src/: compress.rs  helper.rs  lib.rs  libs.rs  pmap.rs  range.rs  shard.rs  unsorted.rs
(+1112 files in other folders)
