[package]
name = "shardio"
version = "0.5.1"
authors = ["Patrick Marks <patrick@10xgenomics.com>", "Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>", "Lance Hepler <lance.hepler@10xgenomics.com>"]
edition = "2018"
license = "MIT"
description = "Out-of-memory sorting and streaming of large datasets"
documentation = "https://10xgenomics.github.io/rust-shardio"
repository = "https://github.com/10XGenomics/rust-shardio"
keywords = ["serde", "serialization", "map-reduce", "out-of-memory"]

[features]
# Switch on the 'full-test' feature (in release mode), to enable 
# some long-running stress-tests
full-test = []

[dependencies]
serde = "*"
serde_derive = "*"
bincode = ">=1.0"
byteorder = "*"
libc = "*"
lz4 = "*"
failure = "0.1.5"
crossbeam-channel = "0.3.8"
failure_derive = "*"
min-max-heap = "1.2.2"

[dev-dependencies]
tempfile = "*"
criterion = "0.2.3"
fxhash = "*"
lazy_static = "*"
pretty_assertions = "0.5.1"

[[bench]]
name = "my_bench"
harness = false
