[package]
name = "shardio"
version = "0.5.4"
authors = ["Patrick Marks <patrick@10xgenomics.com>", "Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>", "Lance Hepler <lance.hepler@10xgenomics.com>"]
edition = "2018"
license = "MIT"
description = "Out-of-memory sorting and streaming of large datasets"
documentation = "https://10xgenomics.github.io/rust-shardio"
repository = "https://github.com/10XGenomics/rust-shardio"
keywords = ["serde", "serialization", "map-reduce", "out-of-memory"]
readme = "README.md"

[features]
# Switch on the 'full-test' feature (in release mode), to enable 
# some long-running stress-tests
full-test = []

[dependencies]
serde = "1"
serde_derive = "1"
bincode = "1.1"
byteorder = "1.3.0"
libc = "0.2"
lz4 = "1"
failure = "0.1.5"
crossbeam-channel = "0.3.8"
failure_derive = "0.1"
min-max-heap = "1.2.2"
log = "^0.4"
rustc_version_runtime = "^0.1"
semver = "^0.9"

[dev-dependencies]
tempfile = "^3.1"
criterion = "0.2.3"
fxhash = "0.2.1"
lazy_static = "1.2"
pretty_assertions = "0.5.1"
quickcheck = "^0.9"
rand = "^0.7"
is_sorted = "0.1"

[[bench]]
name = "my_bench"
harness = false
